# PedestrianIntent

./: README.md  pyproject.toml
examples/: 1_feature_extraction_demo.py  2_intention_prediction_pipeline.py
pedestrian_intent/: __init__.py  pipeline.py
pedestrian_intent/assets/: class_definitions.json
pedestrian_intent/core/: __init__.py  structures.py
pedestrian_intent/detectors/: __init__.py  grounded_sam_detector.py
pedestrian_intent/extractors/: __init__.py  base_extractor.py  gaze_extractor.py  pose_extractor.py  trajectory_extractor.py
pedestrian_intent/predictors/: __init__.py  base_predictor.py  rule_based_predictor.py
pedestrian_intent/utils/: __init__.py  visualization.py
scripts/: download_models.sh
